--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>EducationSocial</title>
+    <title>edpicker | Discover Webinars</title>
     <base href="/" />
-
+    <meta name="description" content="Webinar discovery platform where participants can search free or premium webinars across the globe it also helps organisers to manage their webinar participants">
+    <meta name="keywords" content="webinar,webinar,online class,join webinar,attend webinar,promote webinar,search webinar">
+    <meta name="author" content="John Doe">
     <link href="https://fonts.googleapis.com/css?family=Domine" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oregano" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
@@ -14,7 +16,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 </head>
 
-<body style="font-family: 'Varela Round', sans-serif;">
+<body style="font-family: 'Varela Round', sans-serif; background-color: #f4f5fa;">
     <app-root></app-root>
 </body>
 
